[package]
name = "csv-normalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive", "env"] }
csv = "1.3.0"
derivative = "2.2.0"
hyper = "0.14.27"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
snafu = "0.7.5"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs"] }
url = { version = "2.4.1", features = ["serde"] }
